[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/Page1.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/Page2.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/Page3.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/TuitScreens.gd" type="Script" id=4]
[ext_resource path="res://start-assets/audio/menu_click.wav" type="AudioStream" id=5]
[ext_resource path="res://UI/Page4.tscn" type="PackedScene" id=6]

[node name="TuitScreen" type="Node"]
script = ExtResource( 4 )

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Page1" parent="." instance=ExtResource( 1 )]

[node name="Page2" parent="." instance=ExtResource( 2 )]

[node name="Page3" parent="." instance=ExtResource( 3 )]

[node name="Page4" parent="." instance=ExtResource( 6 )]
